# curate-mcp

./: .env  README.md  main.py  pyproject.toml
app/: customize.py  scrape.py  server.py
app/config/: __init__.py  load.py  schema.py
app/drivers/: chrome.py
